Make vertical scrollbar always visible for prevent page flicking

--- a/style/Oxygen/Oxygen.css
+++ b/style/Oxygen/Oxygen.css
@@ -55,6 +55,10 @@ table {
 
 /* Text Setup (Equalise everything before styling)
 -------------------------------------------------------------*/
+html {
+	height: 99%;
+	overflow-y: scroll;
+}
 
 body {
 	font-size: 100%;
